--- a/NUFSCar/app/src/main/res/layout/activity_login.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_login.xml
@@ -10,4 +10,34 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.monitora.android.nufscar.view.LoginActivity">
 
+    <TextView
+        android:id="@+id/textLogin"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:text="Login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:hint="Login"
+        android:layout_below="@+id/textLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextLogin" />
+
+    <EditText
+        android:hint="Senha"
+        android:layout_below="@+id/editTextLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextSenha" />
+
+    <Button
+        android:id="@+id/buttonEntrar"
+        android:background="@color/colorPrimary"
+        android:text="Entrar"
+        android:layout_below="@+id/editTextSenha"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
