--- a/NUFSCar/app/src/main/res/layout/activity_events.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_events.xml
@@ -12,17 +12,32 @@
 
     <TextView
         android:id="@+id/textEventos"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:textSize="20sp"
+        android:textSize="10pt"
         android:text="Eventos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <EditText
-        android:hint="Busca Vida"
+    <Button
+        android:id="@+id/buttonSearchE"
+        android:textSize="8pt"
+        android:background="@color/colorPrimary"
+        android:hint="Busca"
         android:layout_below="@+id/textEventos"
-        android:layout_width="match_parent"
+        android:layout_toRightOf="@+id/editTextBE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/editTextBE"
+        android:textSize="8pt"
+        android:hint="Palavra-chave"
+        android:layout_width="270sp"
         android:layout_height="wrap_content"
-        android:id="@+id/editTextBE" />
+        android:layout_below="@+id/textEventos"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
