ScrollView e ListView adicionados em News Feed e Favoritos

--- a/NUFSCar/app/src/main/res/layout/activity_main.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     tools:context="com.monitora.android.nufscar.main.MainActivity">
 
     <TextView
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:textSize="20sp"
         android:text="LoadPage"
