--- a/NUFSCar/app/src/main/res/layout/activity_favorities.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_favorities.xml
@@ -19,16 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/buttonSearchF"
-        android:textSize="8pt"
-        android:background="@color/colorPrimary"
-        android:hint="Busca"
-        android:layout_below="@+id/textFavorites"
-        android:layout_toRightOf="@+id/editTextBF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <EditText
         android:id="@+id/editTextBF"
         android:textSize="8pt"
@@ -38,4 +28,29 @@
         android:layout_below="@+id/textFavorites"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <ScrollView
+        android:id="@+id/scrollViewFavorite"
+        android:layout_below="@+id/editTextBF"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/listViewFavorite"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ListView>
+
+    </ScrollView>
+
+    <Button
+        android:id="@+id/buttonSearchF"
+        android:textSize="8pt"
+        android:background="@color/colorPrimary"
+        android:hint="Busca"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/scrollViewFavorite"
+        android:layout_toRightOf="@+id/editTextBF"
+        android:layout_alignTop="@+id/editTextBF" />
 </RelativeLayout>
