--- a/NUFSCar/app/src/main/res/layout/activity_login.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
     <TextView
         android:id="@+id/textLogin"
         android:layout_centerHorizontal="true"
+        android:textStyle="bold"
         android:textSize="20sp"
         android:text="Login"
         android:layout_width="wrap_content"
