--- a/NUFSCar/app/src/main/res/layout/activity_news_content.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_news_content.xml
@@ -11,6 +11,7 @@
     tools:context="com.monitora.android.nufscar.view.NewsContentActivity">
 
     <TextView
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:textSize="20sp"
         android:text="Conteudo da Noticia"
