--- a/NUFSCar/app/src/main/res/layout/activity_news_feed.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_news_feed.xml
@@ -19,16 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/buttonSearchF"
-        android:textSize="8pt"
-        android:background="@color/colorPrimary"
-        android:hint="Busca"
-        android:layout_below="@+id/textNewsfeed"
-        android:layout_toRightOf="@+id/editTextBN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <EditText
         android:id="@+id/editTextBN"
         android:textSize="8pt"
@@ -38,5 +28,30 @@
         android:layout_below="@+id/textNewsfeed"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <ScrollView
+        android:id="@+id/scrollViewNewsfeed"
+        android:layout_below="@+id/editTextBN"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/listViewNewsfeed"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ListView>
+
+    </ScrollView>
+
+    <Button
+        android:id="@+id/buttonSearchN"
+        android:textSize="8pt"
+        android:background="@color/colorPrimary"
+        android:hint="Busca"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/scrollViewNewsfeed"
+        android:layout_toRightOf="@+id/editTextBN"
+        android:layout_alignTop="@+id/editTextBN" />
 
 </RelativeLayout>
