--- a/NUFSCar/app/src/main/res/layout/activity_events.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_events.xml
@@ -1,58 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_events"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.monitora.android.nufscar.view.EventsActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <TextView
-        android:id="@+id/textEventos"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:textSize="10pt"
-        android:text="Eventos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
-
-    <EditText
-        android:id="@+id/editTextBE"
-        android:textSize="8pt"
-        android:hint="Palavra-chave"
-        android:layout_width="270sp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textEventos"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-
-    <ScrollView
-        android:id="@+id/scrollViewEventos"
-        android:layout_below="@+id/editTextBE"
+    <include
+        layout="@layout/app_bar_events"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ListView
-            android:id="@+id/listViewEventos"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-        </ListView>
-
-    </ScrollView>
-
-    <Button
-        android:id="@+id/buttonSearchE"
-        android:textSize="8pt"
-        android:background="@color/colorPrimary"
-        android:hint="Busca"
-        android:layout_below="@+id/textEventos"
-        android:layout_toRightOf="@+id/editTextBE"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_events"
+        app:menu="@menu/activity_events_drawer" />
+
+</android.support.v4.widget.DrawerLayout>
