--- a/NUFSCar/app/src/main/res/layout/content_events.xml
+++ b/NUFSCar/app/src/main/res/layout/content_events.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/content_events"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.monitora.android.nufscar.main.MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.monitora.android.nufscar.view.EventsActivity"
+    tools:showIn="@layout/app_bar_events">
 
-    <TextView
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"
-        android:text="LoadPage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 </RelativeLayout>
