--- a/NUFSCar/app/src/main/res/layout/activity_splash.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_centerHorizontal="true"
         android:textSize="20sp"
-        android:text="Loading"
+        android:text="Loading..."
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
