--- a/NUFSCar/app/src/main/res/layout/content_events.xml
+++ b/NUFSCar/app/src/main/res/layout/content_events.xml
@@ -13,4 +13,49 @@
     tools:context="com.monitora.android.nufscar.view.EventsActivity"
     tools:showIn="@layout/app_bar_events">
 
+    <TextView
+        android:id="@+id/textEventos"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:textSize="10pt"
+        android:text="Eventos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+
+    <EditText
+        android:id="@+id/editTextBE"
+        android:textSize="8pt"
+        android:hint="Palavra-chave"
+        android:layout_width="270sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textEventos"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
+    <ScrollView
+        android:id="@+id/scrollViewEventos"
+        android:layout_below="@+id/editTextBE"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/listViewEventos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+
+    </ScrollView>
+
+    <Button
+        android:id="@+id/buttonSearchE"
+        android:textSize="8pt"
+        android:background="@color/colorPrimary"
+        android:hint="Busca"
+        android:layout_below="@+id/textEventos"
+        android:layout_toRightOf="@+id/editTextBE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
